--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me</h2>
-									<p> My name is Zamir Lalji. I am a recent graduate of York University. I am a passionate software developer who wants to showcase my skills that I have learned throughout my University Career and Free Time. I have learned many languages such as Python, C, C++, Javascript, React.js etc. For more information please take a look at my resume and github. If you have any question please email me. </p>
+									<p> My name is Zamir Lalji. I am a recent graduate of York University. I am a passionate software developer who wants to showcase the skills that I have learned throughout my University Career and Free Time. I have learned many languages such as Python, C, C++, Javascript, React.js etc. For more information please take a look at my resume and github. If you have any questions please email me. </p>
 								</header>
 							</article>
 
