--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 						<ul class="icons">
 							<li><a href="https://linkedin.com/in/zamir-lalji-b1021b1b2" class="icon brands fa-linkedin"><span class="label">LinkendIn</span></a></li>
 							<li><a href="https://github.com/Zamir95/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="mailto:zamirlal15@gmail.com" class="fa fa-envelope" aria-hidden="true"></a></li>
 						</ul>
 					</nav>
 
@@ -63,10 +64,6 @@
 							<section>
 								<h3>Resume</h3>
 								<p><a href="https://drive.google.com/file/d/1H-bmwwZzyRSLS5OVZnEome11WB8SS7qx/view?usp=sharing">Resume</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="mailto:zamirlal15@gmail.com">zamirlal15@gmail.com</a></p>
 							</section>
 						</section>
 					</footer>
