--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li class="active"><a href="href="https://drive.google.com/file/d/1H-bmwwZzyRSLS5OVZnEome11WB8SS7qx/view?usp=sharing"">Resume</a></li>
+							<li class="active"><a href="https://drive.google.com/file/d/1H-bmwwZzyRSLS5OVZnEome11WB8SS7qx/view?usp=sharing">Home</a></li>
 							
 						</ul>
 						<ul class="icons">
