--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!-- Favicons --> <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg"/>
+		<!-- Favicons --> <link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg" width="20" height="20"/>
 	</head>
 	<body class="is-preload">
 
