--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zamir Lalji - Software Developer</h1>
+						<h1>Zamir Lalji - Software Developer / Data Analyst</h1>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me</h2>
-									<p> My name is Zamir Lalji. I graduated from York University in Computer Science. I am passionate about becoming a software developer who wants to showcase the skills that I have learned throughout my University Career and Free Time. I have learned many languages such as Python, C, C++, Javascript, React.js etc. For more information please take a look at my resume and github. If you have any questions please email me. </p>
+									<p> My name is Zamir Lalji. I graduated from York University in Computer Science. I am passionate about becoming a Software Developer or a Data Analyst who wants to showcase the skills that I have learned throughout my University Career and Free Time. I have learned many languages such as Python, C, C++, Javascript, React.js etc. For more information please take a look at my resume and github. If you have any questions please contact me. </p>
 								</header>
 							</article>
 
