--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me</h2>
-									<p> My name is Zamir Lalji. I graduated from York University in Computer Science. I am passionate about becoming a Software Developer who wants to showcase the skills that I have learned throughout my University Career and Free Time. I have learned many languages such as Python, C, C++, Javascript, React.js etc. For more information please take a look at my resume and github. If you have any questions please contact me. </p>
+									<p> Individual who is passionate about Software Developing, testing, debugging. I have learned many languages such as Python, C, C++, Javascript, React.js etc.</p>
 								</header>
 							</article>
 
