--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me</h2>
-									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Desigining. I have learned many languages such as Python, C, C++, Javascript, React.js, SQL etc.</p>
+									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many languages such as Python, C, C++, JavaScript, React.js, SQL etc.</p>
 								</header>
 							</article>
 
