--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>Zamir Lalji &copy; 2020 &#8211; 2021</li></ul>
+						<ul><li>&copy; Zamir Lalji 2020 &#8211; 2021</li></ul>
 					</div>
 
 			</div>
