--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zamir Lalji - Software Developer</h1>
+						<h1>Zamir Lalji - Software Developer (Backend)</h1>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
