--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="active"><a href="https://docs.google.com/document/d/1KwcrhsvigHDCgGOsODCpE6Vq1vTdZKSFTovB0U6jKv4/edit?usp=sharing">Resume</a></li>
+							<li class="active"><a href="https://shielded-lowlands-74816.herokuapp.com/">Project</a></li>
 							
 						</ul>
 						<ul class="icons">
