--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<button onclick="active='index.html'">Home</button>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li class="active"><a href="https://docs.google.com/document/d/1KwcrhsvigHDCgGOsODCpE6Vq1vTdZKSFTovB0U6jKv4/edit?usp=sharing">Resume</a></li>
 							<li class="active"><a href="https://shielded-lowlands-74816.herokuapp.com/">Project</a></li>
 							
