--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me</h2>
-									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many languages such as Python, C, C++, JavaScript, React.js, SQL etc.</p>
+									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many technology languages such as Python, C, React.js, SQL, MongoDB, Node.js, JSON etc.</p>
 								</header>
 							</article>
 
