--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li class="active"><a href="https://docs.google.com/document/d/1KwcrhsvigHDCgGOsODCpE6Vq1vTdZKSFTovB0U6jKv4/edit?usp=sharing">Resume</a></li>
+							<li class="active"><a href="https://drive.google.com/file/d/11N4hD-bADaE6b-skhhfI2aFnUJ9xgyXW/view?usp=sharing">Resume</a></li>
 							<li class="active"><a href="https://shielded-lowlands-74816.herokuapp.com/">Project</a></li>
 							
 						</ul>
