Updated favicon links
links now open in new tab

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="https://linkedin.com/in/zamir-lalji-b1021b1b2" class="icon brands fa-linkedin"><span class="label">LinkendIn</span></a></li>
-							<li><a href="https://github.com/Zamir95/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="mailto:zamirlal15@gmail.com" class="fa fa-envelope" aria-hidden="true"></a></li>
+							<li><a href="https://linkedin.com/in/zamir-lalji-b1021b1b2" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkendIn</span></a></li>
+							<li><a href="https://github.com/Zamir95/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+							<li><a href="mailto:zamirlal15@gmail.com" class="fa fa-envelope" aria-hidden="true" target="_blank"></a></li>
 						</ul>
 					</nav>
 
