--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Home</a></li>
-							<li class="active"><a href="https://drive.google.com/file/d/1V4X2ihy5lm0R7F1HBwW7dmLkO2mJBl3w/view?usp=sharing" target="_blank">Resume</a></li>
-							<li class="active"><a href="https://shielded-lowlands-74816.herokuapp.com/" target="_blank">Project</a></li>
+							<li class="button"><a href="index.html">Home</a></li>
+							<li class="button"><a href="https://drive.google.com/file/d/1V4X2ihy5lm0R7F1HBwW7dmLkO2mJBl3w/view?usp=sharing" target="_blank">Resume</a></li>
+							<li class="button"><a href="https://shielded-lowlands-74816.herokuapp.com/" target="_blank">Project</a></li>
 							
 						</ul>
 						<ul class="icons">
