--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
 							</article>
 
 						<!-- Footer -->
-							
-
+						<footer class="container">
+							<p class="float-right">
+  							<a href="#"><button type="button" class="block">Back to Top</button></a>
+						</footer>
 					</div>
 
 				<!-- Copyright -->
