--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Zamir Lalji - Backend Software Developer</h1>
+						<h1>Zamir Lalji - Software Developer (Backend)</h1>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -56,6 +56,30 @@
 							</article>
 
 						<!-- Footer -->
+						<h1>Contact Me</h1>
+						<footer id="footer">
+						<section>
+							<form method="post" action="mailto:zamirlal15@gmail.com">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
+								<ul class="text-center">
+									<input type="submit" value="Send Message" />
+								</ul>
+							</form>
+						</section>
+					</footer>
 						<footer class="text-center">
   							<a href="#"><button type="button" class="block">Back to Top</button></a>
 						</footer>
