--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<h1>Contact Me</h1>
 						<footer id="footer">
 						<section>
-							<form method="post" action="mailto:zamirlal15@gmail.com">
+							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
