--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
 							</article>
 
 						<!-- Footer -->
+						<form action="contact.php" method="post">
+  <div class="elem-group">
+    <label for="name">Contact Me</label>
+    <input type="text" id="name" name="visitor_name" placeholder="John Doe" pattern=[A-Z\sa-z]{3,20} required>
+  </div>
+  <div class="elem-group">
+    <label for="email">Your E-mail</label>
+    <input type="email" id="email" name="visitor_email" placeholder="john.doe@email.com" required>
+  </div>
+ 
+  <div class="elem-group">
+    <label for="message">Write your message</label>
+    <textarea id="message" name="visitor_message" placeholder="Say whatever you want." required></textarea>
+  </div>
+  <button type="submit">Send Message</button>
+</form>
 						<footer class="text-center">
   							<a href="#"><button type="button" class="block">Back to Top</button></a>
 						</footer>
