--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="active"><a href="https://drive.google.com/file/d/1FvhXxFCU-m2sjKLVQiXIVK9u22sAL-cf/view?usp=sharing" target="_blank">Resume</a></li>
-							<li class="active"><a href="https://shielded-lowlands-74816.herokuapp.com/" target="_blank">Project</a></li>
-							<li class="active"><a href="https://github.com/Zamir95/Python-To-Do-list-app" target="_blank">Python Project</a></li>
+							<li class="active"><a href="Projects.html" target="_blank">Projects</a></li>
 							
 						</ul>
 						<ul class="icons">
