--- a/Projects.html
+++ b/Projects.html
@@ -10,9 +10,10 @@
 	</head>
  <body style="background-color: #585858;">
 		<h1>Projects</h1>
-		<p>This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
+		<p>This is a list of all projects that I have done. I have made 2 chat apps, a To-Do list in react and node.js, a To-Do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
 	<ul class="links">
-		<li><a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a></li>
+		<li><a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a></li> 
+		<p>This app lets users send messages to each other. All messages have been encrypted such that the user is not able to chnage another users message. Messages display on the page.</p>
 		<li><a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a></li>
 		<li><a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a></li>
 		<li><a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a></li>
