--- a/Projects.html
+++ b/Projects.html
@@ -13,13 +13,13 @@
 		<p>This is a list of all projects that I have done. I have made 2 chat apps, a To-Do list in react and node.js, a To-Do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
 	<ul class="links">
 		<li><a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a></li> 
-		<p>This app lets users send messages to each other. All messages have been encrypted such that the user is not able to chnage another users message. Messages display on the page.</p>
+		<p>&nbsp;&nbsp;&nbsp;This app lets users send messages to each other. All messages have been encrypted such that the user is not able to chnage another users message. Messages display on the page.</p>
 		<li><a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a></li>
 		<li><a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a></li>
 		<li><a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a></li>
-		<p>Created a Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p>
+		<p>&nbsp;&nbsp;&nbsp;Created a Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p>
 		<li><a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a></li>
-		<p> &nbsp;&nbsp;&nbsp;REST Books API that gets all book in a database. You can update, delete, remove, and edit all books.</p> 
+		<p>&nbsp;&nbsp;&nbsp;REST Books API that gets all book in a database. You can update, delete, remove, and edit all books.</p> 
 
 	</ul>
 	<a href="index.html"><button type="button" class="block">Back to home</button></a>
