--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,7 @@
 		<li><a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a></li>
 		<li><a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a></li>
 		<li><a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a></li>
-		<p>&nbsp;&nbsp;&nbsp;Created a Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and &nbsp;&nbsp;&nbsp; replace it with another product.</p>
+		<p>&nbsp;&nbsp;&nbsp;Created a Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and</p> <p>&nbsp;&nbsp;&nbsp; replace it with another product.</p>
 		<li><a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a></li>
 		<p>&nbsp;&nbsp;&nbsp;REST Books API that gets all book in a database. You can update, delete, remove, and edit all books.</p> 
 
