--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many technology languages such as Python, C, React, SQL, MongoDB, Node.js, JSON, Bootstrap and Django. I continue to learn and develope my skills in programming and continuously learning new framworks and languages.</p>
 								</header>
 							</article>
+						<div>
+							<a href="Projects.html"><h3>Projects</h3></a>
+								<p style="text-align:center;">Link to all my projects that I have created. Many more to come</p>
+							</div>
 
 						<!-- Footer -->
 						<footer class="text-center">
