--- a/index.html
+++ b/index.html
@@ -52,11 +52,35 @@
 									<h2>About Me</h2>
 									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many technology languages such as Python, C, React, SQL, MongoDB, Node.js, JSON, Bootstrap and Django. I continue to learn and develope my skills in programming and continuously learning new framworks and languages.</p>
 								</header>
-								<div>
+							</article>
+							<div>
 							<a href="Projects.html"><h3>Projects</h3></a>
 								<p style="text-align:center;">Link to all my projects that I have created. Many more to come</p>
 							</div>
-							</article>
+						<section>
+							<h4>Contact Me</h4>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+						</section>
+						</section>
+
 						<!-- Footer -->
 						<footer class="text-center">
   							<a href="#"><button type="button" class="block">Back to Top</button></a>
