--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="active"><a href="https://drive.google.com/file/d/1FvhXxFCU-m2sjKLVQiXIVK9u22sAL-cf/view?usp=sharing" target="_blank">Resume</a></li>
-							<li class="active"><a href="Projects.html" target="_blank">Projects</a></li>
 							
 						</ul>
 						<ul class="icons">
@@ -54,7 +53,7 @@
 								</header>
 							</article>
 							<div>
-							<a href="Projects.html"><h3>Projects</h3></a>
+							<a href="Projects.html" target="_blank><h3>Projects</h3></a>
 								<p style="text-align:center;">Link to all my projects that I have created. Many more to come</p>
 							</div>
 
