--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</header>
 							</article>
 							<div>
-							<a href="Projects.html" target="_blank><h3>Projects</h3></a>
+							<a href="Projects.html"><h3>Projects</h3></a>
 								<p style="text-align:center;">Link to all my projects that I have created. Many more to come</p>
 							</div>
 
