--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							</article>
 							<div>
 							<a href="Projects.html"><h3>Projects</h3></a>
-								<p style="text-align:center;">Link to all my projects that I have created. Many more to come.</p>
+								<p style="text-align:center;">Link to all my projects that I have created. Many more to come. Click Title.</p>
 							</div>
 
 						<!-- Footer -->
