Project html updated
Added spaces in parapgraph to align button

--- a/Projects.html
+++ b/Projects.html
@@ -13,7 +13,7 @@
 		<p>This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
 	<ul class="links">
 		<li><a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a></li>
-		<p>Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages</p>
+		<p>&nbsp;&nbsp;&nbsp;Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages</p>
 		<li><a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a></li>
 		<li><a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a></li>
 		<li><a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a></li>
