--- a/Projects.html
+++ b/Projects.html
@@ -15,6 +15,12 @@
 		<li><a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a></li>
 		<p>&nbsp;&nbsp;&nbsp;Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages</p>
 		<li><a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a></li>
+		<p>&nbsp;&nbsp;&nbsp;Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
+		and Year of all books that you Add, Edit, Delete and Refresh. The edit button in the application allows users to Edit a current book that is in the table.
+		Delete Button allows user to delete a book that they no longer want and the Refresh butoon allows all new books to be displayed once clicked on. There are
+		2 coloumns in the Applciaiton. One is for books issued and books unissued. This means that when the user of the application adds a book the is a Yes or 
+		No button that allows the user to decide if the book has been published or not. If the book is not published it will be displayed in the Unissued table 
+		but if the book is puslished it will be displayed in the Books Issued table.</p>
 		<li><a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a></li>
 		<li><a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a></li>
 		<li><a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a></li>
