reverted changes to project.html
reverted project.html

--- a/Projects.html
+++ b/Projects.html
@@ -15,7 +15,7 @@
 		<li><a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a></li>
 		<p>&nbsp;&nbsp;&nbsp;Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages</p>
 		<li><a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a></li>
-		<p style="text-indent: 40px"> Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
+		<p>&nbsp;&nbsp;&nbsp;Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
 		and Year of all books that you Add, Edit, Delete and Refresh. The edit button in the application allows users to Edit a current book that is in the table.
 		Delete Button allows user to delete a book that they no longer want and the Refresh button allows all new books to be displayed once clicked on. There are
 		2 coloumns in the Applciaiton. One is for books issued and books unissued. This means that when the user of the application adds a book the is a Yes or 
