--- a/Projects.html
+++ b/Projects.html
@@ -22,8 +22,15 @@
 		No button that allows the user to decide if the book has been published or not. If the book is not published it will be displayed in the Unissued table 
 		but if the book is puslished it will be displayed in the Books Issued table.</p>
 		<li><a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a></li>
+		<p>&nbsp;&nbsp;&nbsp;This app lets users add tasks that they need to finish, or are completed. For example if the tasks that the user needs to complete are groceries, 
+			gardening, pick up food etc they can add those items to the unfinsihed table list. Once they complete the items the user can click the done 
+			button and it will move the finished item to finished table task. Lets say the user half completed the task the user can click the unfinished 
+			button and move the task from finished to unfinished table and when they get a chance to fully finish the task they can move it back to finished 
+			table task.</p>
 		<li><a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a></li>
+		<p>&nbsp;&nbsp;&nbsp;Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p> 
 		<li><a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a></li>
+		<p>REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just programming books.</p>
 
 	</ul>
 	<a href="index.html"><button type="button" class="block">Back to home</button></a>
