--- a/Projects.html
+++ b/Projects.html
@@ -30,7 +30,7 @@
 		<li><a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a></li>
 		<p>&nbsp;&nbsp;&nbsp;Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p> 
 		<li><a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a></li>
-		<p>REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just programming books.</p>
+		<p>&nbsp;&nbsp;&nbsp;REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just programming books.</p>
 
 	</ul>
 	<a href="index.html"><button type="button" class="block">Back to home</button></a>
