--- a/Projects.html
+++ b/Projects.html
@@ -13,7 +13,7 @@
 		<p>This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
 	<ul class="links">
 		<a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a>
-		<p>&nbsp;Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages</p>
+		<p>&nbsp;Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
 		<a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a>
 		<p>&nbsp;Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
 		and Year of all books that you Add, Edit, Delete and Refresh. The edit button in the application allows users to Edit a current book that is in the table.
