--- a/Projects.html
+++ b/Projects.html
@@ -31,6 +31,8 @@
 		<p>&nbsp;Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p> 
 		<a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a>
 		<p>&nbsp;REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just used programming books.</p>
+		<a href="https://github.com/Zamir95/Piano-Project"><button type="button" class="btn btn-primary btn-md">JavaScript Piano Keyboard</button></a>
+		<p>&nbsp;Hard coded piano that I made with sound and background.</p>
 
 	</ul>
 	<a href="index.html"><button type="button" class="block">Back to home</button></a>
