--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 								</header>
 							</article>
 							<article class="post featured">		
-								<header class="major>
+								<div class="major>
 								 <a href="Projects.html"><h3>Projects</h3></a>
 								<p style="text-align:center;">Link to all my projects that I have created.</p>
-											     </header>
+											     </div>
 						</article>
 
 						<!-- Footer -->
