updated project file
project html updated

--- a/Projects.html
+++ b/Projects.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	</head>
  <body style="background-color: #585858;">
+	 <header class="major">
 		<h1>Projects</h1>
 		<p>This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
 	<ul class="links">
@@ -33,6 +34,7 @@
 		<p>REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just used programming books.</p>
 		<a href="https://github.com/Zamir95/Piano-Project"><button type="button" class="btn btn-primary btn-md">JavaScript Piano Keyboard</button></a>
 		<p>Hard coded piano that I made with sound and background.</p>
+		</header>
 
 	</ul>
 	<a href="index.html"><button type="button" class="block">Back to home</button></a>
