--- a/Projects.html
+++ b/Projects.html
@@ -12,7 +12,9 @@
 	 <header class="major">
 		<h1>Projects</h1>
 		<p>This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
-	<ul class="links">
+	 </header>
+		 <ul class="links">
+			 <header class="major">
 		<a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a>
 		<p>Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
 		<a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a>
