--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,7 @@
 		 <ul class="links">
 			 <header class="major">
 		<a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a>
-		<p>Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
+		<p style="text-align:center;">Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
 		<a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a>
 		<p>Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
 		and Year of all books that you Add, Edit, Delete and Refresh. The edit button in the application allows users to Edit a current book that is in the table.
