--- a/Projects.html
+++ b/Projects.html
@@ -11,31 +11,31 @@
  <body style="background-color: #585858;">
 	 <header class="major">
 		<h1>Projects</h1>
-		<p>This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
+		<p style="text-align:center;">This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
 	 </header>
 		 <ul class="links">
 			 <header class="major">
 		<a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a>
 		<p style="text-align:center;">Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
 		<a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a>
-		<p>Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
+		<p style="text-align:center;">Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
 		and Year of all books that you Add, Edit, Delete and Refresh. The edit button in the application allows users to Edit a current book that is in the table.
 		Delete Button allows user to delete a book that they no longer want and the Refresh button allows all new books to be displayed once clicked on. There are
 		2 coloumns in the Applciaiton. One is for books issued and books unissued. This means that when the user of the application adds a book the is a Yes or 
 		No button that allows the user to decide if the book has been published or not. If the book is not published it will be displayed in the Unissued table 
 		but if the book is puslished it will be displayed in the Books Issued table.</p>
 		<a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a>
-		<p>This app lets users add tasks that they need to finish, or are completed. For example if the tasks that the user needs to complete are groceries, 
+		<p style="text-align:center;">This app lets users add tasks that they need to finish, or are completed. For example if the tasks that the user needs to complete are groceries, 
 			gardening, pick up food etc they can add those items to the unfinsihed table list. Once they complete the items the user can click the done 
 			button and it will move the finished item to finished table task. Lets say the user half completed the task the user can click the unfinished 
 			button and move the task from finished to unfinished table and when they get a chance to fully finish the task they can move it back to finished 
 			table task.</p>
 		<a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a>
-		<p>Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p> 
+		<p style="text-align:center;">Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p> 
 		<a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a>
-		<p>REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just used programming books.</p>
+		<p style="text-align:center;">REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just used programming books.</p>
 		<a href="https://github.com/Zamir95/Piano-Project"><button type="button" class="btn btn-primary btn-md">JavaScript Piano Keyboard</button></a>
-		<p>Hard coded piano that I made with sound and background.</p>
+		<p style="text-align:center;">Hard coded piano that I made with sound and background.</p>
 		</header>
 
 	</ul>
