--- a/Projects.html
+++ b/Projects.html
@@ -17,6 +17,8 @@
 			 <header class="major">
 		<a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a>
 		<p style="text-align:center;">Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
+		<a href="https://github.com/Zamir95/ReactandNodeJs-Chat-app"><button type="button" class="btn btn-primary btn-md">React Chat App</button></a>
+		<p style="text-align:center;">React Chat app. The object of this chat app is to allow users to communicate with each other in rooms. First the user will be able to signup for the chat app. Users can use a real email or can make up a fake email but it must have a @.com or @.ca email and the password they create must be minimum of 6 characters long. Once the users sign up they will taken to the chat room page where they will be greeted with a welcome message with the name they used to sign up. From there they can either use the rooms that have already been created or they can create a new room and once they are in the room they can send messages. All message texts have colour for each user that is using the app. All messages are encrypted so users are not allowed to change each other messages.</p>
 		<a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a>
 		<p style="text-align:center;">Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
 		and Year of all books that you Add, Edit, Delete and Refresh. The edit button in the application allows users to Edit a current book that is in the table.
