--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me</h2>
-									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many technology languages such as Python, C, React, SQL, MongoDB, Node.js, JSON, Bootstrap and Django. I continue to learn and develope my skills in programming and continuously learning new frameworks and languages. Aside from coding and learning new technologies some of my hobbies are sports. I enjoy watching NFL, NHL and Soccer any many more sports. Also I enjoy playing soccer in my free time which is one of my favourite sports to play.</p>
+									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many technology languages such as Python, C, React, SQL, MongoDB, Node.js, JSON, Bootstrap and Django. I continue to learn and develope my skills in programming and continuously learning new frameworks and languages. Aside from coding and learning new technologies some of my hobbies are sports. I enjoy watching NFL, NHL and Soccer. Also I enjoy playing soccer in my free time which is one of my favourite sports to play.</p>
 								</header>
 							</article>
 							<header class="major">
