--- a/Projects.html
+++ b/Projects.html
@@ -16,28 +16,28 @@
 		 <ul class="links">
 			 <header class="major">
 		<a href="https://shielded-lowlands-74816.herokuapp.com/"><button type="button" class="btn btn-primary btn-md">Chat App</button></a>
-		<p style="text-align:center;">Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
+		<p style="text-align:center; margin: 20px;">Chat app that lets users interact with each other. All messages are encrypted so users are not allowed to change each other messages.</p>
 		<a href="https://github.com/Zamir95/ReactandNodeJs-Chat-app"><button type="button" class="btn btn-primary btn-md">React Chat App</button></a>
-		<p style="text-align:center;">React Chat app. The object of this chat app is to allow users to communicate with each other in rooms. First the user will be able to signup for the chat app. Users can use a real email or can make up a fake email but it must have a @.com or @.ca email and the password they create must be minimum of 6 characters long. Once the users sign up they will taken to the chat room page where they will be greeted with a welcome message with the name they used to sign up. From there they can either use the rooms that have already been created or they can create a new room and once they are in the room they can send messages. All message texts have colour for each user that is using the app. All messages are encrypted so users are not allowed to change each other messages.</p>
+		<p style="text-align:center; margin: 20px;">React Chat app. The object of this chat app is to allow users to communicate with each other in rooms. First the user will be able to signup for the chat app. Users can use a real email or can make up a fake email but it must have a @.com or @.ca email and the password they create must be minimum of 6 characters long. Once the users sign up they will taken to the chat room page where they will be greeted with a welcome message with the name they used to sign up. From there they can either use the rooms that have already been created or they can create a new room and once they are in the room they can send messages. All message texts have colour for each user that is using the app. All messages are encrypted so users are not allowed to change each other messages.</p>
 		<a href="https://github.com/Zamir95/Python-Book-Application/"><button type="button" class="btn btn-primary btn-md">Python Book App</button></a>
-		<p style="text-align:center;">Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
+		<p style="text-align:center; margin: 20px;">Python Book Application. The object of this Application is a book application. It gets the Id, Name, Description, ISBN, Page Count, Issued, Author
 		and Year of all books that you Add, Edit, Delete and Refresh. The edit button in the application allows users to Edit a current book that is in the table.
 		Delete Button allows user to delete a book that they no longer want and the Refresh button allows all new books to be displayed once clicked on. There are
 		2 coloumns in the Applciaiton. One is for books issued and books unissued. This means that when the user of the application adds a book the is a Yes or 
 		No button that allows the user to decide if the book has been published or not. If the book is not published it will be displayed in the Unissued table 
 		but if the book is puslished it will be displayed in the Books Issued table.</p>
 		<a href="https://github.com/Zamir95/Python-To-Do-list-app/"><button type="button" class="btn btn-primary btn-md">To-Do List Python</button></a>
-		<p style="text-align:center;">This app lets users add tasks that they need to finish, or are completed. For example if the tasks that the user needs to complete are groceries, 
+		<p style="text-align:center; margin: 20px;">This app lets users add tasks that they need to finish, or are completed. For example if the tasks that the user needs to complete are groceries, 
 			gardening, pick up food etc they can add those items to the unfinsihed table list. Once they complete the items the user can click the done 
 			button and it will move the finished item to finished table task. Lets say the user half completed the task the user can click the unfinished 
 			button and move the task from finished to unfinished table and when they get a chance to fully finish the task they can move it back to finished 
 			table task.</p>
 		<a href="https://github.com/Zamir95/Todo-Application"><button type="button" class="btn btn-primary btn-md">To-Do List JavaScript</button></a>
-		<p style="text-align:center;">Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p> 
+		<p style="text-align:center; margin: 20px;">Todo app that lets you enter a prodcut name and the price and display it. Also lets you update the product by removing the product if there isnt anymore more of that product and replace it with another product.</p> 
 		<a href="https://github.com/Zamir95/Restful-API-using-NODE-JS-and-Express-JS"><button type="button" class="btn btn-primary btn-md">Rest-API JavaScript</button></a>
-		<p style="text-align:center;">REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just used programming books.</p>
+		<p style="text-align:center; margin: 20px;">REST API for books which allows the user to add books, delete, edit or remove the books. Books can be any book but for this project I just used programming books.</p>
 		<a href="https://github.com/Zamir95/Piano-Project"><button type="button" class="btn btn-primary btn-md">JavaScript Piano Keyboard</button></a>
-		<p style="text-align:center;">Hard coded piano that I made with sound and background.</p>
+		<p style="text-align:center; margin: 20px;">Hard coded piano that I made with sound and background.</p>
 		</header>
 
 	</ul>
