--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	</head>
  <body style="background-color: #585858;">
-	 <header class="major">
+	 <header class="major" style="margin: 20px;">
 		<h1>Projects</h1>
 		<p style="text-align:center;">This is a list of all projects that I have done. I have made 2 chat apps, a to-do list in react and node.js, a to-do list in Python, Django Flix App, and many more. Links to all these projects will be displayed here:</p>
 	 </header>
