--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							</article>
 							<header class="major">
 							<a href="Projects.html" target="_blank"><h3>Projects</h3></a>
-								<p style="text-align:center;">Link to all my projects that I have created. Many more to come</p>
+								<p style="text-align:center;">Link to all my projects that I have created. Many more to come.</p>
 							</header>
 
 						<!-- Footer -->
