--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>About Me</h2>
-									<img src="MySite/photo.JPG" alt="Me" width="300" height="300">
+									<img src="photo.JPG" alt="Me" width="300" height="300">
 									<p> Individual who is passionate about Software Developing, Testing, Debugging, and Designing. I have learned many technology languages such as Python, C, React, SQL, MongoDB, Node.js, JSON, Bootstrap and Django. I continue to learn and develop my skills in programming and continuously learning new frameworks and languages. Aside from coding and learning new technologies some of my hobbies are sports. I enjoy watching NFL, NHL, NBA and Soccer. Also, I enjoy playing soccer in my free time which is one of my favourite sports to play.</p>
 								</header>
 							</article>
