--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							</article>
 							<header class="major">
 							<a href="Projects.html" target="_blank"><h3>Projects</h3></a>
-								<p style="text-align:center;">Link to all my projects that I have created. Many more to come.</p>
+								<p style="text-align:center;">Links to all my projects that I have created. Many more to come.</p>
 							</header>
 
 						<!-- Footer -->
