--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						<ul class="icons">
 							<li><a href="https://linkedin.com/in/zamir-lalji-b1021b1b2" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkendIn</span></a></li>
 							<li><a href="https://github.com/Zamir95/" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/zamir_lalji#" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="mailto:zamirlal15@gmail.com" class="fa fa-envelope" aria-hidden="true" target="_blank"></a></li>
 						</ul>
 					</nav>
