--- a/index.html
+++ b/index.html
@@ -58,6 +58,40 @@
 							<a href="Projects.html" target="_blank"><h3>Projects</h3></a>
 								<p style="text-align:center;">Links to all my projects that I have created. Many more to come.</p>
 							</header>
+						<h4>Technologies/Frameworks</h4>
+							<p style="text-align:center;">These are the following Technologies and Frameworks that I have experience in below:</p>
+							<ul class="icons">
+                				<li><img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="Mongodb" title="Mongodb"><p>Mongodb</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/javascript.png" alt="Javascript" title="Javascript"><p>Javascript</p></li>
+                				<li><img src="https://img.icons8.com/material-outlined/48/000000/github.png" alt="GitHub" title="GitHub"><p>Github</p></li>
+                				<li><img src="https://img.icons8.com/material-outlined/48/000000/react-native.png" alt="React Native" title="React Native"><p>React Native</p></li>
+                				<li><img src="https://img.icons8.com/material-outlined/48/000000/html-5.png" alt="HTML-5" title="HTML-5"><p>HTML-5</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/python.png" alt="Python" title="Python"><p>Python</p></li>
+                				<li><img src="https://img.icons8.com/fluent/48/000000/maria-db.png" alt="Maria-db" title="Maria-db"><p>Mariadb</p></li>
+                				<li><img src="https://img.icons8.com/ios-filled/48/000000/linux.png" alt="Linux" title="Linux"><p>Linux</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/visual-studio-code-2019.png" alt="Visual Studio Code" title="Visual Studio Code"><p>Visual Studio Code</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/bootstrap.png" alt="Bootstrap" title="Bootstrap"><p>Bootstrap</p></li>
+                				<li><img src="https://img.icons8.com/ios/48/000000/django.png" alt="Django" title="Django"><p>Django</p></li>
+                				<li><img src="https://img.icons8.com/color/50/000000/postgreesql.png" alt="PostgreeSQL" title="PostgreeSQL"><p>PostgreSQL</p></li>
+                				<li><img src="https://img.icons8.com/color/48/000000/nodejs.png" alt="nodejs" title="nodejs"><p>Nodejs</p></li>
+            				</ul>
+							</header>
+							</article>
+						<article class="post featured">
+							<h4>Contact Me</h4>
+						  <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xqkwqwzg" method="post">
+    							<fieldset id="fs-frm-inputs">
+      								<label for="full-name">Full Name</label>
+     	 							<input type="text" name="name" id="full-name" placeholder="John Doe" required="">
+      								<label for="email-address">Email Address</label>
+      								<input type="email" name="_replyto" id="email-address" placeholder="email@domain.com" required="">
+      								<label for="message">Message</label>
+      								<textarea rows="5" name="message" id="message" placeholder="Leave a Message" required=""></textarea>
+      								<input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+    							</fieldset>
+    							<input type="submit" value="Submit">
+  							</form>
+						</article>
 
 						<!-- Footer -->
 						<footer class="text-center">
