--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 				<li><img src="https://img.icons8.com/ios/48/000000/django.png" alt="Django" title="Django"><p>Django</p></li>
                 				<li><img src="https://img.icons8.com/color/50/000000/postgreesql.png" alt="PostgreeSQL" title="PostgreeSQL"><p>PostgreSQL</p></li>
                 				<li><img src="https://img.icons8.com/color/48/000000/nodejs.png" alt="nodejs" title="nodejs"><p>Node.js</p></li>
+						<li><img src="https://img.icons8.com/color/48/000000/mysql-logo.png" alt="mysql" title="mysql"><p>MySQL</p></li>	
             				</ul>
 							</header>
 							</article>
