--- a/index.html
+++ b/index.html
@@ -82,21 +82,28 @@
             				</ul>
 							</header>
 							</article>
-						<article class="post featured">
+							<section>
 							<h4>Contact Me</h4>
-						  <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xqkwqwzg" method="post">
-    							<fieldset id="fs-frm-inputs">
-      								<label for="full-name">Name</label>
-     	 							<input type="text" name="name" id="full-name" placeholder="John Doe" required="">
-      								<label for="email-address">Email Address</label>
-      								<input type="email" name="_replyto" id="email-address" placeholder="email@domain.com" required="">
-      								<label for="message">Message</label>
-      								<textarea rows="5" name="message" id="message" placeholder="Leave a Message" required=""></textarea>
-      								<input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-    							</fieldset>
-    							<input type="submit" value="Send Message">
-  							</form>
-						</article>
+							<form method="post" action="https://formspree.io/f/xqkwqwzg">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" placeholder="John Doe" required="" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="_replyto" id="email" placeholder="email@domain.com" required="" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="5" placeholder="Leave a Message" required=""></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+						</section>
 
 						<!-- Footer -->
 						<footer class="text-center">
